更新 demo